examples/negative/silent_contract/mutable_op_no_handler_or_row.kai
# Silent contract (#511 audit): docs/effects-stdlib.md §`Mutable`:
# "calling Mutable's operations without a handler in scope is a
# type error". An inner fn calls `Mutable.array_set` without
# declaring `Mutable` in its row AND main does not handle Mutable
# in any way visible to the typer (`main : Int / Stdout`). Stage 2
# accepts. See README.

fn writer(xs: Array[Int]) : Int / Stdout = {
  let _ = Mutable.array_set(xs, 0, 99)
  Mutable.array_get(xs, 0)
}

fn main() : Int / Mutable {
  let xs = Mutable.array_make(1, 0)
  writer(xs)
}
